# to-generate-2D-floorplan-CAD-from-3D-point-clouds

./: CMakeLists.txt  README.md  create_ifc.py  floorplan.cpp
sample_result/: sample.ifc
